tests/programs/fail/informal.vi

enum IO { I, O }

pub fn main(move *io) {
  1 + 1 = 2;
  ~_ = _;
  _ += ~1;
  let ~&_ = ~&_;
  let IO::I = io;
}
